# orc-plugin_nn-ntsc-chroma-sink

./: CMakeLists.txt  README.md  flake.nix
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: DecodeOrcPluginSDKHelpers.cmake
decoders/: comb.cpp  comb.h  componentframe.cpp  componentframe.h  decoder.cpp  decoder.h  firfilter.h  iirfilter.h  nn_output_writer.cpp  nn_output_writer.h  nn_source_field.h  ntscdecoder.cpp  ntscdecoder.h
resources/: chroma_net_v2.onnx
scripts/: package_local.sh
src/: nn_ntsc_chroma_sink_stage.cpp  nn_ntsc_chroma_sink_stage.h  nn_output_backend.cpp  nn_output_backend.h  orc_plugin_sdk_compat.h  plugin.cpp  plugin.h  vfr_to_source_field_adapter.cpp  vfr_to_source_field_adapter.h
tests/: CMakeLists.txt  analysis_tooling_contract_test.cpp  nn_ntsc_chroma_sink_stage_test.cpp  plugin_entrypoints_test.cpp  stage_smoke_test.cpp
